--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -54,15 +54,12 @@ internships:
     position: Event Management
     year: 2019
 
-myname:
-  - name1: saqib
-    two: idon
 # extracurricular
 extras:
   - task: Volunteered in organising the “International Conference on 100 years of The Waste Land, Ulysses, and Jacob's Room” at the Department of English, Aligarh Muslim University in February 2023.
   - task: 'Volunteered in organising “The 19th International Biennial Symposium on Literature and Culture in the Asia-Pacific Region” at the Department of English, Aligarh Muslim University in November 2022.'
   - task: Public Relations team member in Filmsaaz (International Film Festival). Written contents regarding the event.
   - task: Worked as a Disciplinary Committee Member in organising Filmsaaz (International Film Festival) at Aligarh Muslim University.
-  - task: Decoration committee member in organising the University Literary Festival.
+  - task: Decoration committee member in organising 'LitFest' the University Literary Festival at AMU.
   - task: Volunteered in organising Sir Syed Day 2018, at Aligarh Muslim University.
 
