--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -56,10 +56,10 @@ internships:
 
 # extracurricular
 extras:
-  - task: Volunteered in organising the “International Conference on 100 years of The Waste Land, Ulysses, and Jacob's Room” at the Department of English, Aligarh Muslim University in February 2023.
-  - task: 'Volunteered in organising “The 19th International Biennial Symposium on Literature and Culture in the Asia-Pacific Region” at the Department of English, Aligarh Muslim University in November 2022.'
-  - task: Public Relations team member in Filmsaaz (International Film Festival). Written contents regarding the event.
-  - task: Worked as a Disciplinary Committee Member in organising Filmsaaz (International Film Festival) at Aligarh Muslim University.
-  - task: Decoration committee member in organising 'LitFest' the University Literary Festival at AMU.
-  - task: Volunteered in organising Sir Syed Day 2018, at Aligarh Muslim University.
+  - task: Volunteered in organising the <b>“International Conference on 100 years of The Waste Land, Ulysses, and Jacob's Room”</b> at the Department of English, Aligarh Muslim University in February 2023.
+  - task: 'Volunteered in organising <b>“The 19th International Biennial Symposium on Literature and Culture in the Asia-Pacific Region”</b> at the Department of English, Aligarh Muslim University in November 2022.'
+  - task: Public Relations team member in <b>'Filmsaaz'</b> (International Film Festival). Wrote promotional content for the event.
+  - task: Worked as a Disciplinary Committee Member in organising <b>'Filmsaaz'</b> (International Film Festival) at Aligarh Muslim University.
+  - task: Decoration committee member in organising <b>'LitFest'</b> the University Literary Festival at AMU.
+  - task: Volunteered in organising <b>'Sir Syed Day 2018'</b>, at Aligarh Muslim University.
 
