--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -28,7 +28,7 @@ publications:
 
 #presentations
 presentations:
-  - title: "Identity, Migration and Cultural Displacement in the Poems of Tabish Khair: A Postcolonial Overview"
+  - title: 'Identity, Migration and Cultural Displacement in the Poems of Tabish Khair: A Postcolonial Overview'
     conf: 'Indian English Poetry: Toru Dutt to Vanavil K Ravi'
     date: 1, 2 May, 2023
 
