--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -21,7 +21,7 @@ skills:
 
 # publications
 publications:
-  - title: 'Analysing Emotional Depth in AI-Generated Poetry: A New Frontier in Computational Creativity'
+  - title: "Analysing Emotional Depth in AI-Generated Poetry: A New Frontier in Computational Creativity"
     authors: Nazm Us Saqib
     journal: "Jamshedpur Research Review vol. 5 issue 61, 150-155"
     date: 19 Nov, 2023
@@ -62,4 +62,3 @@ extras:
   - task: Worked as a Disciplinary Committee Member in organising <b>'Filmsaaz'</b> (International Film Festival) at Aligarh Muslim University.
   - task: Decoration committee member in organising <b>'LitFest'</b> the University Literary Festival at AMU.
   - task: Volunteered in organising <b>'Sir Syed Day 2018'</b>, at Aligarh Muslim University.
-
