--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -30,10 +30,12 @@ publications:
 presentations:
   - title: 'Identity, Migration and Cultural Displacement in the Poems of Tabish Khair: A Postcolonial Overview'
     conf: 'Indian English Poetry: Toru Dutt to Vanavil K Ravi'
+    by: 'Department of English, Aligarh Muslim University'
     date: 1, 2 May, 2023
 
   - title: 'The ongoing Hijab debate in Iran and India: A study through 50 archived internet memes'
     conf: 'E-Literature: Explorations in Literary Creativity'
+    by: 'Department of English, Jamia Millia Islamia'
     date: 16-17 January 2023
 
 # internships
