--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -25,11 +25,19 @@ publications:
     authors: Nazm Us Saqib
     journal: "Jamshedpur Research Review vol. 5 issue 61, 150-155"
     date: 19 Nov, 2023
+    link: 'https://www.researchgate.net/publication/375768520_Analysing_Emotional_Depth_in_AI-Generated_Poetry_A_New_Frontier_in_Computational_Creativity'
 
-  - title: "A Hidden Narrative: Examining the Emissary’s Position inBrowning’s ‘My Last Duchess’"
+  - title: "A Hidden Narrative: Examining the Emissary's Position in Browning's 'My Last Duchess'"
     authors: Nazm Us Saqib
     journal: "Bodhi International Journal of Research in Humanities, Arts and Science vol. 8 no. 5, 82-86"
     date: 22 June, 2024
+    link: 'https://www.bodhijournals.com/pdf/V8N4/Bodhi_V8N4_014.pdf'
+
+  - title: "Echoes of Disillusionment: Comparative Analysis of 'Look Back in Anger' and 'Aadhe Adhure' in Depicting Middle-Class Struggles"
+    authors: Nazm Us Saqib
+    journal: "Lapis Lazuli: An International Literary Journal vol. 14, no. 1, 37-47"
+    date: 15 July, 2024
+    link: 'https://pintersociety.com/wp-content/uploads/2024/08/Nazm-Us-Saqib.pdf'
 
 #presentations
 presentations:
