--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -25,37 +25,37 @@ publications:
     authors: Nazm Us Saqib
     journal: "Jamshedpur Research Review vol. 5 issue 61, 150-155"
     date: 19 Nov, 2023
-    link: 'https://www.researchgate.net/publication/375768520_Analysing_Emotional_Depth_in_AI-Generated_Poetry_A_New_Frontier_in_Computational_Creativity'
+    link: "https://www.researchgate.net/publication/375768520_Analysing_Emotional_Depth_in_AI-Generated_Poetry_A_New_Frontier_in_Computational_Creativity"
 
   - title: "A Hidden Narrative: Examining the Emissary's Position in Browning's 'My Last Duchess'"
     authors: Nazm Us Saqib
     journal: "Bodhi International Journal of Research in Humanities, Arts and Science vol. 8 no. 5, 82-86"
     date: 22 June, 2024
-    link: 'https://www.bodhijournals.com/pdf/V8N4/Bodhi_V8N4_014.pdf'
+    link: "https://www.bodhijournals.com/pdf/V8N4/Bodhi_V8N4_014.pdf"
 
   - title: "Echoes of Disillusionment: Comparative Analysis of 'Look Back in Anger' and 'Aadhe Adhure' in Depicting Middle-Class Struggles"
     authors: Nazm Us Saqib
     journal: "Lapis Lazuli: An International Literary Journal vol. 14, no. 1, 37-47"
     date: 15 July, 2024
-    link: 'https://pintersociety.com/wp-content/uploads/2024/08/Nazm-Us-Saqib.pdf'
+    link: "https://pintersociety.com/wp-content/uploads/2024/08/Nazm-Us-Saqib.pdf"
 
 #presentations
 presentations:
-  - title: 'Identity, Migration and Cultural Displacement in the Poems of Tabish Khair: A Postcolonial Overview'
-    conf: 'Indian English Poetry: Toru Dutt to Vanavil K Ravi'
-    by: 'Department of English, Aligarh Muslim University'
+  - title: "Identity, Migration and Cultural Displacement in the Poems of Tabish Khair: A Postcolonial Overview"
+    conf: "Indian English Poetry: Toru Dutt to Vanavil K Ravi"
+    by: "Department of English, Aligarh Muslim University"
     date: 1, 2 May, 2023
 
-  - title: 'The ongoing Hijab debate in Iran and India: A study through 50 archived internet memes'
-    conf: 'E-Literature: Explorations in Literary Creativity'
-    by: 'Department of English, Jamia Millia Islamia'
+  - title: "The ongoing Hijab debate in Iran and India: A study through 50 archived internet memes"
+    conf: "E-Literature: Explorations in Literary Creativity"
+    by: "Department of English, Jamia Millia Islamia"
     date: 16-17 January 2023
 
 # work experience
 workexp:
-  - position: 'Research Associate'
-    institution: 'The English and Foreign Languages University'
-    time: 'December 2023 to March 2024'
+  - position: "Research Associate"
+    institution: "The English and Foreign Languages University"
+    time: "December 2023 to March 2024"
 
 # internships
 internships:
@@ -82,9 +82,9 @@ internships:
 # extracurricular
 extras:
   - task: Volunteered in organising the <b>“International Conference on 100 years of The Waste Land, Ulysses, and Jacob's Room”</b> at the Department of English, Aligarh Muslim University in February 2023.
-  - task: 'Volunteered in organising <b>“The 19th International Biennial Symposium on Literature and Culture in the Asia-Pacific Region”</b> at the Department of English, Aligarh Muslim University in November 2022.'
+  - task: "Volunteered in organising <b>“The 19th International Biennial Symposium on Literature and Culture in the Asia-Pacific Region”</b> at the Department of English, Aligarh Muslim University in November 2022."
 
-  - task: 'Independtly formed <strong>Majaz Literary Club</strong> at AMU in 2019. Organised poetry reading sessions, open mic and literary discussions under its aegis.'
+  - task: "Independently formed <strong>Majaz Literary Society</strong> at AMU in 2019. Organised poetry reading sessions, open mic and literary discussions under its aegis."
   - task: Public Relations team member in <b>'Filmsaaz'</b> (International Film Festival). Wrote promotional content for the event.
   - task: Worked as a Disciplinary Committee Member in organising <b>'Filmsaaz'</b> (International Film Festival) at Aligarh Muslim University.
   - task: Decoration committee member in organising <b>'LitFest'</b> the University Literary Festival at AMU.
