--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -3,7 +3,7 @@ personal_info:
   - name: Nazm Us Saqib
     address: Lucknow, Uttar Pradesh, India 226018
     dob: 17/08/1999
-    email: "najmussaquib3@gmail.com"
+    email: "24phen005lk@manuu.edu.in"
     phone_no: "+91 7881111304"
 
 # skills
