changed builder from jekyll to hugo

--- a/data/profile.yml
+++ b/data/profile.yml
@@ -86,6 +86,10 @@ events:
       date: 1-12 July 2024
       
   workshops:
+    - title: "From Teaching to Co-Creation: Anthrogogy and Indian Knowledge Traditions in the Education of Adults"
+      by: "The English and Foreign Languages University Regional Campus, Lucknow"
+      date: 20-21 January 2026
+
     - title: "7-Days National Workshop on Exploring Posthumanism: Interdisciplinary Perspectives and Debates"
       by: "Department of English, Faculty of Science and Humanities, SRM Institute of Science and Technology, Kattankulathur"
       date: 22 - 29 September 2025
