include designation and institution

--- a/data/profile.yml
+++ b/data/profile.yml
@@ -1,7 +1,9 @@
 # personal information
 personal_info:
   - name: Nazm Us Saqib
-    address: Lucknow, Uttar Pradesh, India 226018
+    designation: Research Scholar
+    institution: Maulana Azad National Urdu University, Lucknow Campus
+    address: Lucknow, Uttar Pradesh, India
     dob: 17/08/1999
     email: "24phen005lk@manuu.edu.in"
     phone_no: "+91 7881111304"
